--- a/examples/keycloak/index.html
+++ b/examples/keycloak/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.min.js"></script>
     <script src="https://cdn.auth0.com/js/lock/11.15.0/lock.min.js"></script>
     <script src="https://cdn.auth0.com/js/auth0/9.10/auth0.min.js"></script>
-    <script src="https://auth.fgp.io/auth/js/keycloak.js"></script>
+    <script src="http://localhost:8080/auth/js/keycloak.js"></script>
     <script src="dist/fgp-auth.js"></script>
     <script src="js/app.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
